--- a/demo/SpatialPPIv2_Colab_Example.ipynb
+++ b/demo/SpatialPPIv2_Colab_Example.ipynb
@@ -78,6 +78,7 @@
         "!pip install transformers==4.40.2\n",
         "!pip install sentencepiece==0.2.0\n",
         "!pip install torchsummary==1.5.1\n",
+        "!pip install torchvision==0.17.1",
         "!pip install scipy==1.12.0\n",
         "!pip install torch_cluster\n",
         "!pip install git+https://github.com/yusuf1759/prodigy-cryst.git\n",
